syntax = "proto3";

package pb;

// protoc -I ./ ./*.proto --go_out=plugins=grpc:./

service MySQLBindService {
    rpc NewOneUser (UserBasicInfo) returns (UserBasicInfo);
    rpc GetUserById (QueryUserParams) returns (UserBasicInfo);
    rpc GetUserByEmail (QueryUserParams) returns (UserBasicInfo);
    rpc GetUsersByName (QueryUserParams) returns (UserBasicInfoList);

}

enum QueryField {
    ById = 0;
    ByEmail = 1;
    ByName = 2;
}

message QueryUserParams {
    QueryField filter_field = 1;
    int64 id = 2;
    string email = 3;
    string name = 4;
}

message UserBasicInfo {
    int64 id = 1;
    string name = 2;
    string mobile = 3;
    string email = 4;
    string password = 5;
    int32 gender = 6;
    string create_time = 7;

}

message UserBasicInfoList {
    repeated UserBasicInfo users = 1;
}




